# toylang

./: .gitignore  CMakeLists.txt  LICENSE  Makefile
src/: CMakeLists.txt  Makefile
src/include/: elements.h  tree.h
src/include/bind/: cmt.h  idt.h  kwd.h  ltr.h  opr.h  pnc.h
src/parse/: CMakeLists.txt  node_tree.cpp  tk_check.cpp
src/tokens/: CMakeLists.txt  Makefile
src/tokens/keyword/: if.cpp
src/tokens/literal/: int16.cpp  int32.cpp  int8.cpp  string.cpp  toy.cpp  uint16.cpp  uint32.cpp  uint8.cpp
src/tokens/punctuation/: brace.cpp  bracket.cpp  misc.cpp  quote.cpp  round.cpp  space.cpp
test/: CMakeLists.txt  Makefile  test.cpp
