add_library(tokens 
            # comment/

            # identifier/

            keyword/if.cpp 

            literal/int8.cpp
            literal/int16.cpp 
            literal/int32.cpp
            literal/uint8.cpp
            literal/uint16.cpp
            literal/uint32.cpp
            literal/toy.cpp
            literal/string.cpp
            
            # operation/

            punctuation/brace.cpp
            punctuation/bracket.cpp
            punctuation/misc.cpp
            punctuation/quote.cpp
            punctuation/round.cpp
            punctuation/space.cpp
            )